Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjNumObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(Test())
    end

    action Test() returns Boolean
        Number var
        var:SetValue(5.0)
        return var
    end
end